- Padronizando exibição de mensagens de sucesso/erro e adicionando em todas as páginas - Permitindo usuário se cadastrar sem informar telefone (campo não obrigatório) - Informando mensagem de sucesso ao cadastrar usuário

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,17 +1,21 @@
 body {
 	padding: 15px;
 }
-div.messages
+div.messages-static-container
 {
 	height: 70pt;
 }
-div.messages div
+div.messages-static-container div
 {
 	width: 100%;
 }
+div#content
+{
+	padding-top: 25pt;
+}
 .titulo
 {
-	margin-top: 25pt;
+	margin-bottom: 20pt;
 }
 .form
 {
