--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -27,8 +27,20 @@ div#content
 	max-width: 250pt;
 	margin: auto;
 }
-.form-cadastro, .form-reenvio-senha
+.form-cadastro, .form-reenvio-senha, .form-solicit-docto
 {
 	max-width: 450pt;
 	margin: 15pt auto 0 auto;
+}
+input.data
+{
+	width: 200px;
+}
+input[type=number]::-webkit-outer-spin-button,	/* Desabilita setas */
+input[type=number]::-webkit-inner-spin-button {
+	-webkit-appearance: none; /* display: none; <- Crashes Chrome on hover */
+	margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+input[type=number] {
+	-moz-appearance:textfield; /* Desabilita setas (Firefox) */
 }
