--- a/src/main/webapp/WEB-INF/fragment/header.jspf
+++ b/src/main/webapp/WEB-INF/fragment/header.jspf
@@ -39,12 +39,25 @@
 		errorElement: "div",
 		errorClass: "invalid-feedback",
 		highlight: function(element, errorClass, validClass) {		// validação dinâmica apontou erro (agora além da mensagem, muda a classe do input)
-			$(element).removeClass("is-valid").addClass("is-invalid");
+			if ( element.type === "radio" ) {
+				this.findByName( element.name ).addClass( "is-invalid" ).removeClass( "is-valid" );
+			} else {
+				$( element ).addClass( "is-invalid" ).removeClass( "is-valid" );
+			}		
 		},
 		unhighlight: function(element, errorClass, validClass) {	// validação dinâmica apontou que está ok (agora além da mensagem, muda a classe do input)
-			$(element).removeClass("is-invalid").addClass("is-valid");
-		},
-		errorPlacement: function(error, element) {	// Se o input tiver texto explicativo, inserir msg de erro depois do texto explicativo
+			if ( element.type === "radio" ) {
+				this.findByName( element.name ).removeClass( "is-invalid" ).addClass( "is-valid" );
+			} else {
+				$( element ).removeClass( "is-invalid" ).addClass( "is-valid" );
+			}		},
+		errorPlacement: function(error, element) {	
+			if (element[0].type === "radio") { 
+				// Se o tipo do campo for 'radio', insere msg de erro depois de todos os input-radio do grupo
+				error.insertAfter(element.parents(".form-group").children().last());
+				return;
+			}
+			// Se o input tiver texto explicativo, inserir msg de erro depois do texto explicativo
 			var textoExplicativoElement = $(".text-muted[target='"+element.attr("id")+"']");
 			if (textoExplicativoElement.length) {	// existe?
 				error.insertAfter(textoExplicativoElement);
@@ -56,25 +69,26 @@
 	
 	// Muda as mensagens padrão do Jquery validator
 	jQuery.extend(jQuery.validator.messages, {
-		required: "<spring:message code="javax.validation.constraints.NotBlank.message" />",
+		required: "<spring:message code='javax.validation.constraints.NotBlank.message' />",
 //		remote: "Please fix this field.",
-		email: "<spring:message code="javax.validation.constraints.Email.message" />",
+		email: "<spring:message code='javax.validation.constraints.Email.message' />",
 //		url: "Please enter a valid URL.",
 //		date: "Please enter a valid date.",
 //		dateISO: "Please enter a valid date (ISO).",
 //		number: "Please enter a valid number.",
 //		digits: "Please enter only digits.",
 //		creditcard: "Please enter a valid credit card number.",
-		equalTo: jQuery.validator.format("<spring:message code="msg.erro.campo.deve.ser.igual" />"),
-//		accept: "Please enter a value with a valid extension.",
-		maxlength: jQuery.validator.format("<spring:message code="msg.erro.tamanho.maximo.campo" />"),
-		minlength: jQuery.validator.format("<spring:message code="msg.erro.tamanho.minimo.campo" />"),
+		equalTo: jQuery.validator.format("<spring:message code='msg.erro.campo.deve.ser.igual' />"),
+		accept:"<spring:message code='msg.erro.arquivo.extensao.invalida' />",
+		maxlength: jQuery.validator.format("<spring:message code='msg.erro.tamanho.maximo.campo' />"),
+		minlength: jQuery.validator.format("<spring:message code='msg.erro.tamanho.minimo.campo' />"),
 //		rangelength: jQuery.validator.format("Please enter a value between {0} and {1} characters long."),
 //		range: jQuery.validator.format("Please enter a value between {0} and {1}."),
-		max: jQuery.validator.format("<spring:message code="msg.erro.valor.deve.ser.menor.igual" />"),
-		min: jQuery.validator.format("<spring:message code="msg.erro.valor.deve.ser.maior.igual" />"),
+		max: jQuery.validator.format("<spring:message code='msg.erro.valor.deve.ser.menor.igual' />"),
+		min: jQuery.validator.format("<spring:message code='msg.erro.valor.deve.ser.maior.igual' />"),
 
-		pattern: "<spring:message code="javax.validation.constraints.Pattern.message" />"
+		pattern: "<spring:message code='javax.validation.constraints.Pattern.message' />",
+		maxsize: "<spring:message code='msg.erro.arquivo.muito.grande' />"
 	});
 	
 	// Aplica validação (jquery validation) nos formulários da página
@@ -85,8 +99,8 @@
 		$("form").validate();
 		$("input[type='date']").rules( "add", {	// mensagem personalizada para validação do tipo 'data'
 			messages: {
-				min: formatarMsgValidacaoComData("<spring:message code="msg.erro.data.deve.ser.posterior.ou.igual" />"),
-				max: formatarMsgValidacaoComData("<spring:message code="msg.erro.data.deve.ser.anterior.ou.igual" />")
+				min: formatarMsgValidacaoComData("<spring:message code='msg.erro.data.deve.ser.posterior.ou.igual' />"),
+				max: formatarMsgValidacaoComData("<spring:message code='msg.erro.data.deve.ser.anterior.ou.igual' />")
 			}
 		});
 	});
