- Criação da tela de acompanhamento de solicitações - Separando camada de serviços de solicitação de visto e passaporte para melhor organização

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -44,3 +44,14 @@ input[type=number]::-webkit-inner-spin-button {
 input[type=number] {
 	-moz-appearance:textfield; /* Desabilita setas (Firefox) */
 }
+
+.solicitacoes-passaporte, .solicitacoes-visto
+{
+	background-color: #F8F9FA;
+	padding: 20pt;
+	margin-bottom: 20pt;
+}
+.solicitacoes-passaporte h2, .solicitacoes-visto h2
+{
+	margin-bottom: 20pt;
+}
