--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -44,7 +44,11 @@ input[type=number]::-webkit-inner-spin-button {
 input[type=number] {
 	-moz-appearance:textfield; /* Desabilita setas (Firefox) */
 }
-
+.status
+{
+	text-align: center; 
+	font-weight: bold;
+}
 .solicitacoes-passaporte, .solicitacoes-visto
 {
 	background-color: #F8F9FA;
