--- a/src/main/webapp/WEB-INF/fragment/form-solicitacao-passaporte.jspf
+++ b/src/main/webapp/WEB-INF/fragment/form-solicitacao-passaporte.jspf
@@ -17,11 +17,19 @@
 </c:if>
 
 <div class="text-left">
+	<c:if test="${not ESTAH_CRIANDO_SOLICITACAO}">
+		<div class="form-group">
+			<label for="dataSolicitacao">Data da Solicitação:</label><br />
+			<form:input type="text" id="dataSolicitacao" path="dataSolicitacaoFormatada" 
+			cssClass="form-control data" required="required" disabled="true"/>
+		</div>
+	</c:if>
+
 	<div class="form-group">
 	<spring:bind path="nomeSolicitante">
 		<label for="nomeSolicitante">* Nome do Solicitante:</label><br />
 		<form:input type="text" id="nomeSolicitante" path="nomeSolicitante" placeholder="Digite o nome completo do solicitante"
-		minlength="2" maxlength="80" cssClass="form-control ${status.error ? 'is-invalid':''}" required="required" disabled="${IS_MODO_CONSULTA ? 'true':'false'}" />
+		minlength="2" maxlength="80" cssClass="form-control editavel ${status.error ? 'is-invalid':''}" required="required" disabled="${IS_MODO_CONSULTA ? 'true':'false'}" />
 		<div class="invalid-feedback"><form:errors path="nomeSolicitante" /></div>
 	</spring:bind>
 	</div>
@@ -30,7 +38,7 @@
 	<spring:bind path="cpfSolicitante">
 		<label for="cpfSolicitante">* CPF do Solicitante:</label><br />
 		<form:input type="text" id="cpfSolicitante" path="cpfSolicitanteFormatado" placeholder="Digite o CPF do solicitante" pattern="^[0-9]{3}\.[0-9]{3}\.[0-9]{3}-[0-9]{2}$"
-		cssClass="cpf form-control ${status.error ? 'is-invalid':''}" required="required" disabled="${IS_MODO_CONSULTA ? 'true':'false'}"/>
+		cssClass="cpf form-control editavel ${status.error ? 'is-invalid':''}" required="required" disabled="${IS_MODO_CONSULTA ? 'true':'false'}"/>
 		<small class="form-text text-muted" target="cpfSolicitante">Formato: 123.456.789-01</small>
 		<div class="invalid-feedback"><form:errors path="cpfSolicitante" /></div>
 	</spring:bind>
@@ -40,7 +48,7 @@
 	<spring:bind path="rgSolicitante">
 		<label for="rgSolicitante">* RG do Solicitante:</label><br />
 		<form:input type="number" id="rgSolicitante" path="rgSolicitante" placeholder="Digite o RG do solicitante" pattern="^[0-9]{5,20}$"
-		minlength="5" maxlength="20" cssClass="form-control ${status.error ? 'is-invalid':''}" required="required" disabled="${IS_MODO_CONSULTA ? 'true':'false'}"/>
+		minlength="5" maxlength="20" cssClass="form-control editavel ${status.error ? 'is-invalid':''}" required="required" disabled="${IS_MODO_CONSULTA ? 'true':'false'}"/>
 		<small class="form-text text-muted" target="rgSolicitante">Somente números</small>
 		<div class="invalid-feedback"><form:errors path="rgSolicitante" /></div>
 	</spring:bind>
@@ -50,7 +58,7 @@
 	<spring:bind path="previsaoSaida">
 		<label for="previsaoSaida">* Previsão de saída do Brasil:</label><br />
 		<form:input type="date" id="previsaoSaida" path="previsaoSaida" pattern="^[0-9]{4}-[0-9]{2}-[0-9]{2}$"
-		cssClass="form-control data ${status.error ? 'is-invalid':''}" required="required" disabled="${IS_MODO_CONSULTA ? 'true':'false'}"/>
+		cssClass="form-control editavel data ${status.error ? 'is-invalid':''}" required="required" disabled="${IS_MODO_CONSULTA ? 'true':'false'}"/>
 		<small class="form-text text-muted" target="previsaoSaida">Formato: dd/mm/aaaa</small>
 		<div class="invalid-feedback"><form:errors path="previsaoSaida" /></div>
 	</spring:bind>
@@ -60,7 +68,7 @@
 	<spring:bind path="observacao">
 		<label for="observacao">Observação:</label><br />
 		<form:textarea id="observacao" path="observacao" maxlength="100" 
-		cssClass="form-control ${status.error ? 'is-invalid':''}" disabled="${IS_MODO_CONSULTA ? 'true':'false'}" />
+		cssClass="form-control editavel ${status.error ? 'is-invalid':''}" disabled="${IS_MODO_CONSULTA ? 'true':'false'}" />
 		<small class="form-text text-muted" target="observacao">Máximo de 100 caracteres.</small>
 		<div class="invalid-feedback"><form:errors path="observacao" /></div>
 	</spring:bind>
@@ -81,6 +89,7 @@ var configurarCampoDataPrevisaoSaida = function() {
 	$("input#previsaoSaida").attr("min", formatarDateToAAAAMMDD(dataMinimaPrevisaoSaida));
 	$("input#previsaoSaida").attr("max", formatarDateToAAAAMMDD(dataMaximaPrevisaoSaida));
 };
+
 $(document).ready(function(){
 	configurarCampoDataPrevisaoSaida();
 });
