--- a/src/main/webapp/WEB-INF/fragment/form-solicitacao-visto.jspf
+++ b/src/main/webapp/WEB-INF/fragment/form-solicitacao-visto.jspf
@@ -1,3 +1,4 @@
+<%@ taglib uri="http://java.sun.com/jsp/jstl/core" 	 prefix="c" %>
 <%@ taglib uri="http://www.springframework.org/tags" prefix="spring"%>
 <%@ taglib uri="http://www.springframework.org/tags/form" prefix="form" %>
 
@@ -67,7 +68,15 @@
 </spring:bind>
 </div>
 
-<div class="form-group">
+<div class="form-group documento-baixar" style="display: ${IS_MODO_CONSULTA ? 'auto' : 'none'};">
+	<label>Documento anexo:</label>
+	<c:choose>
+	<c:when test="${not empty solicitacao.documento}"><a href="baixarDocumentoSolicitacaoVisto?id=${solicitacao.id}">Baixar documento anexo</a></c:when>
+	<c:otherwise><span class="text-muted">(não tem documento anexo)</span></c:otherwise>
+	</c:choose>
+</div>
+
+<div class="form-group documento-informar" style="display: ${IS_MODO_CONSULTA ? 'none' : 'auto'};">
 <spring:bind path="documento">
 	<label for="documento">Anexar documento:</label><br />
 	<form:input type="file" id="documento" path="documento" extension="pdf,doc,docx,zip,rar,jpg,jpeg,png,bmp"
