- Feita tela e funcionalidade de login de funcionarios - Feito esboço das telas do funcionário e navegação (via links) dentro da aplicação (home e listagem das solicitações de passaporte e visto) - Feito interceptador para validar funcionário autenticado e permissão de acessar as suas funcionalidades.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -59,3 +59,13 @@ input[type=number] {
 {
 	margin-bottom: 20pt;
 }
+
+.form-login-admin
+{
+	max-width: 250pt;
+	margin: 15pt auto 0 auto;
+}
+.form-login-admin .invalid-feedback
+{
+	color: white;
+}
