--- a/src/main/webapp/WEB-INF/fragment/header.jspf
+++ b/src/main/webapp/WEB-INF/fragment/header.jspf
@@ -95,14 +95,15 @@
 	$(document).ready(function(){
 //		$('.data').mask('00/00/0000'); // campo data já é tratado pelo bootstrap e html5
 		$('.cpf').mask('000.000.000-00');
+		$('.matricula').mask('0000');
 		aplicarMascaraTelefone8ou9digitos('.telefone');
-		$("form").validate();
 		$("input[type='date']").rules( "add", {	// mensagem personalizada para validação do tipo 'data'
 			messages: {
 				min: formatarMsgValidacaoComData("<spring:message code='msg.erro.data.deve.ser.posterior.ou.igual' />"),
 				max: formatarMsgValidacaoComData("<spring:message code='msg.erro.data.deve.ser.anterior.ou.igual' />")
 			}
 		});
+		$("form").validate();
 	});
 	</script>
 </head>
