--- a/src/main/webapp/WEB-INF/fragment/header.jspf
+++ b/src/main/webapp/WEB-INF/fragment/header.jspf
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<%-- 
+<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
+--%>
 
 <%-- Includes TAGLIBs --%>
 <%@ taglib uri="http://java.sun.com/jsp/jstl/core" 	 prefix="c" %>
@@ -6,11 +9,8 @@
 <%@ taglib uri="http://www.springframework.org/tags" prefix="spring"%>
 <%@ taglib uri="http://www.springframework.org/tags/form" prefix="form" %>
 <head>
-<%--
-		<meta charset="utf-8">
-		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"> 
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
---%>
+	<meta charset="utf-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 
 	
 	<title>Evisas</title>
 
